{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 12,
  "lineage": "01bf5e8f-3582-7f01-a986-1738f7bdbe18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:vpc/vpc-00ccd859394d4ec3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d2fa88039834c98a",
            "default_route_table_id": "rtb-04325dca9562f36e5",
            "default_security_group_id": "sg-07c35ed3354bf55b5",
            "dhcp_options_id": "dopt-067da6b1cb6504cd4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-00ccd859394d4ec3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04325dca9562f36e5",
            "owner_id": "798256686416",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054349c13f38ec3a3",
            "arn": "arn:aws:ec2:us-east-1:798256686416:elastic-ip/eipalloc-054349c13f38ec3a3",
            "association_id": "eipassoc-0a8991d9f63df7e67",
            "domain": "vpc",
            "id": "eipalloc-054349c13f38ec3a3",
            "instance": "i-08ee5d50d108b9c45",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e6e99ff19c209469",
            "private_dns": "ip-172-31-22-233.ec2.internal",
            "private_ip": "172.31.22.233",
            "public_dns": "ec2-98-88-243-165.compute-1.amazonaws.com",
            "public_ip": "98.88.243.165",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Web-Server-EIP"
            },
            "tags_all": {
              "Name": "Web-Server-EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "eipalloc-054349c13f38ec3a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:798256686416:instance/i-08ee5d50d108b9c45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee5d50d108b9c45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e6e99ff19c209469"
              }
            ],
            "primary_network_interface_id": "eni-0e6e99ff19c209469",
            "private_dns": "ip-172-31-22-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.233",
            "public_dns": "ec2-34-229-129-7.compute-1.amazonaws.com",
            "public_ip": "34.229.129.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e9fe4b2363f8b15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0444d0c58065fe5cd",
            "tags": {
              "Name": "Web-Server"
            },
            "tags_all": {
              "Name": "Web-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018221482cd73ec13"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "i-08ee5d50d108b9c45",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group/sg-018221482cd73ec13",
            "description": "Allow SSH, HTTP, HTTPS, and custom ports",
            "egress": [],
            "id": "sg-018221482cd73ec13",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "798256686416",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ccd859394d4ec3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sg-018221482cd73ec13",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-0f3eb3cd1ddc9de3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f3eb3cd1ddc9de3c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-0f3eb3cd1ddc9de3c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-0f3eb3cd1ddc9de3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-0c9ac66c2a0b4143f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c9ac66c2a0b4143f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-0c9ac66c2a0b4143f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-0c9ac66c2a0b4143f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "30080",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-05f4f0b28278c05be",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30080,
            "id": "sgr-05f4f0b28278c05be",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-05f4f0b28278c05be",
            "tags": null,
            "tags_all": {},
            "to_port": 30080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-05f4f0b28278c05be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-099b100af3a53a8df",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-099b100af3a53a8df",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-099b100af3a53a8df",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-099b100af3a53a8df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-036518becdfb3b452",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-036518becdfb3b452",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-036518becdfb3b452",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-036518becdfb3b452",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "8888",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798256686416:security-group-rule/sgr-0b06bf91c33f8d531",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8888,
            "id": "sgr-0b06bf91c33f8d531",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-018221482cd73ec13",
            "security_group_rule_id": "sgr-0b06bf91c33f8d531",
            "tags": null,
            "tags_all": {},
            "to_port": 8888
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "798256686416",
            "id": "sgr-0b06bf91c33f8d531",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}